Fix JaCoCo ingest flow and phase failure handling